--- a/ComeX.WPF/UserControls/MessageUserControl.xaml
+++ b/ComeX.WPF/UserControls/MessageUserControl.xaml
@@ -11,10 +11,27 @@
             <ResourceDictionary.MergedDictionaries>
                 <ResourceDictionary Source="../Styles.xaml"/>
             </ResourceDictionary.MergedDictionaries>
+            <Style x:Key="HoverWrapPStyle" TargetType="WrapPanel">
+                <Setter Property="Visibility" Value="Hidden" />
+                <Style.Triggers>
+                    <DataTrigger Binding="{Binding RelativeSource={RelativeSource AncestorType=WrapPanel}, Path=IsMouseOver}" Value="True" >
+                        <Setter Property="Visibility" Value="Visible" />
+                    </DataTrigger>
+                </Style.Triggers>
+            </Style>
+
+            <Style x:Key="HoverBackgroundStyle" TargetType="Grid">
+                <Setter Property="Background" Value="{StaticResource DarkBlue3}" />
+                <Style.Triggers>
+                    <Trigger Property="Grid.IsMouseOver" Value="True" >
+                        <Setter Property="Background" Value="{StaticResource DarkBlue2}" />
+                    </Trigger>
+                </Style.Triggers>
+            </Style>
         </ResourceDictionary>
     </UserControl.Resources>
 
-    <Grid>
+    <Grid x:Name="MessageGrid" Style="{StaticResource HoverBackgroundStyle}">
         <Grid.Resources>
             <Style TargetType="{x:Type TextBlock}">
                 <Setter Property="Grid.Column" Value="1"/>
@@ -29,7 +46,12 @@
             <RowDefinition x:Name="EmojiRow"></RowDefinition>
         </Grid.RowDefinitions>
 
-        <WrapPanel x:Name="MessageNickDateWrapP" Grid.Row="0"
+        <Grid Grid.Row="0">
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition/>
+                <ColumnDefinition/>
+            </Grid.ColumnDefinitions>
+        <WrapPanel x:Name="MessageNickDateWrapP" Grid.Column="0"
                    Orientation="Horizontal" 
                    VerticalAlignment="Center">
             <WrapPanel.Resources>
@@ -47,6 +69,22 @@
                        Foreground="{StaticResource LightBlue2}"
                        Text="{Binding MessageDateTime}"/>
         </WrapPanel>
+            <WrapPanel x:Name="MessageToolsWrapP" Grid.Column="1"
+                       Style="{StaticResource HoverWrapPStyle}"
+                       Orientation="Horizontal"
+                       VerticalAlignment="Center"
+                       HorizontalAlignment="Right">
+                <WrapPanel.Resources>
+                    <Style TargetType="{x:Type Button}">
+                        <Setter Property="Margin" Value="0,0,10,0" />
+                        <Setter Property="VerticalAlignment" Value="Center" />
+                    </Style>
+                </WrapPanel.Resources>
+
+                <Button x:Name="ReplyButton" Content="R" Command="{Binding SetReplyCommand}"/>
+                <Button x:Name="EmojiButton" Content="E"/>
+            </WrapPanel>
+        </Grid>
         <TextBlock x:Name="ContentText" Grid.Row="1"
                        Margin="5,0,0,5"
                        Text="{Binding MessageContent}">
