--- a/ComeX.WPF/Views/ChatView.xaml
+++ b/ComeX.WPF/Views/ChatView.xaml
@@ -234,20 +234,40 @@
                              Text="{Binding Content}"/>
                     </StackPanel>
 
-                    <WrapPanel Grid.Row="1" x:Name="TypeToolsWrapPanel" Orientation="Horizontal" FlowDirection="RightToLeft">
-                        <WrapPanel.Resources>
+                    <Grid x:Name="TypeToolsGrid" Grid.Row="1">
+                        <Grid.ColumnDefinitions>
+                            <ColumnDefinition/>
+                            <ColumnDefinition Width="Auto"/>
+                        </Grid.ColumnDefinitions>
+                        <Grid.Resources>
                             <Style TargetType="{x:Type Button}" BasedOn="{StaticResource RoundButtonStyle}">
-                                <Setter Property="Margin" Value="5,5,5,5" />
+                                <Setter Property="Margin" Value="5" />
                                 <Setter Property="Width" Value="20" />
                                 <Setter Property="Height" Value="20" />
                                 <Setter Property="HorizontalAlignment" Value="Right" />
                                 <Setter Property="VerticalAlignment" Value="Center" />
                             </Style>
-                        </WrapPanel.Resources>
-                        <Button x:Name="SendButton" Width="40" Command="{Binding SendChatMessageCommand}" />
+                        </Grid.Resources>
+                        <WrapPanel Grid.Column="0" x:Name="ReplyWrapPanel"
+                                   Orientation="Horizontal"
+                                   Visibility="{Binding ReplyParentVisibility}">
+                            <WrapPanel.Resources>
+                                <Style TargetType="{x:Type Label}">
+                                    <Setter Property="Foreground" Value="{StaticResource LightBlue2}" />
+                                    <Setter Property="VerticalAlignment" Value="Center" />
+                                </Style>
+                            </WrapPanel.Resources>
+                            <Button x:Name="DeleteReplyButton" Command="{Binding UnsetReplyCommand}"/>
+                            <Label x:Name="ReplyLabel" Content="Replying to: " />
+                            <Label x:Name="ReplyParentAuthor" Content="{Binding ReplyParentAuthor}"/>
+                            <Label x:Name="ReplyParentContent" Content="{Binding ReplyParentContentPrint}"/>
+                        </WrapPanel>
+                        <WrapPanel Grid.Column="1" x:Name="TypeToolsWrapPanel" Orientation="Horizontal" FlowDirection="RightToLeft">
+                            <Button x:Name="SendButton" Width="40" Command="{Binding SendChatMessageCommand}" />
                         <Button x:Name="SurveyButton" Command="{Binding CreateSurveyCommand}"></Button>
                         <Button x:Name="EmojiButton"></Button>
                     </WrapPanel>
+                    </Grid>
                 </Grid>
             </Grid>
                 <WrapPanel Grid.Column="1" Grid.Row="1" x:Name="ThreadsWrapP" Background="{StaticResource DarkBlue1}">
