--- a/ComeX.WPF/UserControls/MessageUserControl.xaml
+++ b/ComeX.WPF/UserControls/MessageUserControl.xaml
@@ -41,12 +41,27 @@
             </Style>
         </Grid.Resources>
         <Grid.RowDefinitions>
+            <RowDefinition x:Name="ReplyRow"></RowDefinition>
             <RowDefinition x:Name="AuthorDateRow" Height="20"></RowDefinition>
             <RowDefinition x:Name="ContentRow"></RowDefinition>
             <RowDefinition x:Name="EmojiRow"></RowDefinition>
         </Grid.RowDefinitions>
 
-        <Grid Grid.Row="0">
+        <WrapPanel Grid.Row="0" x:Name="ReplyWrapPanel"
+                                   Orientation="Horizontal"
+                                   Visibility="{Binding ReplyParentVisibility}">
+            <WrapPanel.Resources>
+                <Style TargetType="{x:Type Label}">
+                    <Setter Property="Foreground" Value="{StaticResource LightBlue2}" />
+                    <Setter Property="VerticalAlignment" Value="Center" />
+                </Style>
+            </WrapPanel.Resources>
+            <Label x:Name="ReplyLabel" Content="Replied to: " />
+            <Label x:Name="ReplyParentAuthor" Content="{Binding ReplyParentAuthor}"/>
+            <Label x:Name="ReplyParentContent" Content="{Binding ReplyParentContentPrint}"/>
+        </WrapPanel>
+
+        <Grid Grid.Row="1">
             <Grid.ColumnDefinitions>
                 <ColumnDefinition/>
                 <ColumnDefinition/>
@@ -85,7 +100,7 @@
                 <Button x:Name="EmojiButton" Content="E"/>
             </WrapPanel>
         </Grid>
-        <TextBlock x:Name="ContentText" Grid.Row="1"
+        <TextBlock x:Name="ContentText" Grid.Row="2"
                        Margin="5,0,0,5"
                        Text="{Binding MessageContent}">
         </TextBlock>
