Send survey answer - in progress

--- a/ComeX.WPF/Views/ChatView.xaml
+++ b/ComeX.WPF/Views/ChatView.xaml
@@ -229,6 +229,7 @@
                              Foreground ="{StaticResource LightBlue1}"
                              TextWrapping="Wrap"
                              FontStyle="Normal"
+                             Height="70"
                              CaretBrush="{StaticResource LightBlue1}"
                              MaxLength="{Binding MessageMaxLen}"
                              Text="{Binding Content}"/>
