--- a/ComeX.WPF/UserControls/SurveyUserControl.xaml
+++ b/ComeX.WPF/UserControls/SurveyUserControl.xaml
@@ -90,17 +90,18 @@
                                 <CheckBox x:Name="AnswerButton" Grid.Column="0"
                                     VerticalAlignment="Top"
                                     Foreground="{StaticResource LightBlue1}"
-                                    Content="{Binding Key}"
-                                    Checked="AnswerCheckBox_Checked"
-                                    Unchecked="AnswerCheckBox_Unchecked"/>
+                                    Content="{Binding Content}"
+                                    IsChecked="{Binding IsChecked}"
+                                    Command="{Binding DataContext.CheckedAnswerCommand, RelativeSource={RelativeSource AncestorType=local:SurveyUserControl}}"/>
                                 <TextBlock x:Name="AnswerVotesCounter" Grid.Column="1"
                                        HorizontalAlignment="Right"
-                                       Text="{Binding Value}"/>
+                                       Text="{Binding Votes}"/>
                         </Grid>
                     </DataTemplate>
                 </ListView.ItemTemplate>
             </ListView>
                 <Button x:Name="VoteButton" Grid.Row="1"
+                        IsEnabled="{Binding ButtonEnabled}"
                         Template="{StaticResource RoundedButtonTemplate}"
                         Width="80"
                         Content="Vote"/>
