--- a/ComeX.WPF/Views/ChatView.xaml
+++ b/ComeX.WPF/Views/ChatView.xaml
@@ -40,7 +40,7 @@
 
             <WrapPanel Grid.Row="0" x:Name="ServersWrapP" ItemWidth="100" Orientation="Vertical" VerticalAlignment="Top" Width="100">
                 <ListView Grid.Row="0" Grid.ColumnSpan="2" x:Name="ServerListView"
-                          ItemsSource="{Binding ServersNames}"
+                          ItemsSource="{Binding Servers}"
                           Background="{x:Null}"
                           BorderBrush="{x:Null}"
                           Margin="0,0,0,5">
@@ -105,7 +105,7 @@
                    Orientation="Vertical">
             <ListView Grid.Row="0" Grid.ColumnSpan="2" x:Name="RoomsListView"
                           Margin="5"
-                          ItemsSource="{Binding RoomsNames}"
+                          ItemsSource="{Binding Rooms}"
                           Background="{x:Null}"
                           BorderBrush="{x:Null}">
                 <ListView.ItemContainerStyle>
@@ -264,13 +264,13 @@
                             <Label x:Name="ReplyParentContent" Content="{Binding ReplyParentContentPrint}"/>
                         </WrapPanel>
                         <WrapPanel Grid.Column="1" x:Name="TypeToolsWrapPanel" Orientation="Horizontal" FlowDirection="RightToLeft">
-                            <Button x:Name="SendButton" Width="40" Command="{Binding SendChatMessageCommand}" />
-                            <Button x:Name="SurveyButton" Command="{Binding CreateSurveyCommand}"/>
+                            <Button x:Name="SendButton" Width="40" IsEnabled="{Binding SendMessageEnabled}" Command="{Binding SendChatMessageCommand}" />
+                            <Button x:Name="SurveyButton" IsEnabled="{Binding SendMessageEnabled}" Command="{Binding CreateSurveyCommand}"/>
                         </WrapPanel>
                     </Grid>
                 </Grid>
             </Grid>
-                <WrapPanel Grid.Column="1" Grid.Row="1" x:Name="ThreadsWrapP" Background="{StaticResource DarkBlue1}">
+                <WrapPanel Grid.Column="1" Grid.Row="1" x:Name="SearchWrapP" Background="{StaticResource DarkBlue1}">
 
                 </WrapPanel>
             </Grid>
