--- a/ComeX.WPF/UserControls/MessageUserControl.xaml
+++ b/ComeX.WPF/UserControls/MessageUserControl.xaml
@@ -4,6 +4,8 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:ComeX.WPF.UserControls"
+             xmlns:mvc="clr-namespace:ComeX.WPF.MessageViewModels"
+             xmlns:uc="clr-namespace:ComeX.WPF.UserControls"
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800">
     <UserControl.Resources>
@@ -107,8 +109,40 @@
             </WrapPanel>
         </Grid>
         <TextBlock x:Name="ContentText" Grid.Row="2"
-                       Margin="5,0,0,15"
+                       Margin="5,0,0,0"
                        Text="{Binding MessageContent}">
         </TextBlock>
+
+        <ListView x:Name="EmojiListView" Grid.Row="3"
+                  Margin="0,0,0,15"
+                  HorizontalAlignment="Left"
+                      BorderThickness="0"
+                      Background="{x:Null}"
+                      ItemsSource="{Binding ReactionList}">
+            <ListView.ItemsPanel>
+                <ItemsPanelTemplate>
+                    <StackPanel Orientation="Horizontal"></StackPanel>
+                </ItemsPanelTemplate>
+            </ListView.ItemsPanel>
+            <ListView.ItemTemplate>
+                <DataTemplate>
+                    <StackPanel Orientation="Horizontal">
+                        <Grid x:Name="ReactionGrid">
+                            <Grid.ColumnDefinitions>
+                                <ColumnDefinition/>
+                                <ColumnDefinition/>
+                            </Grid.ColumnDefinitions>
+                            <Image x:Name="ReactionImage" Grid.Column="0"
+               Height="30"
+               Width="30"
+               Source="{Binding Filename}" />
+                            <Label x:Name="ReactionCounter" Grid.Column="1"
+               FontSize="11"
+               Content="{Binding Counter}" />
+                        </Grid>
+                    </StackPanel>
+                </DataTemplate>
+            </ListView.ItemTemplate>
+        </ListView>
     </Grid>
 </UserControl>
