--- a/ComeX.WPF/UserControls/SurveyUserControl.xaml
+++ b/ComeX.WPF/UserControls/SurveyUserControl.xaml
@@ -81,15 +81,16 @@
                                     <ColumnDefinition x:Name="AnswerVotesCounterCol" Width="50"></ColumnDefinition>
                             </Grid.ColumnDefinitions>
                             <Grid.Resources>
-                                <Style TargetType="{x:Type TextBlock}" BasedOn="{StaticResource DefaultTextBlockStyle}">
-                                    <Setter Property="VerticalAlignment" Value="Center" />
-                                    <Setter Property="Margin" Value="5,5,5,5"/>
-                                    <Setter Property="Foreground" Value="{StaticResource LightBlue1}"/>
-                                </Style>
-                            </Grid.Resources>
+                                    <Style TargetType="{x:Type TextBlock}" BasedOn="{StaticResource DefaultTextBlockStyle}">
+                                        <Setter Property="VerticalAlignment" Value="Center" />
+                                        <Setter Property="Margin" Value="5"/>
+                                        <Setter Property="Foreground" Value="{StaticResource LightBlue1}"/>
+                                    </Style>
+                                </Grid.Resources>
                                 <CheckBox x:Name="AnswerButton" Grid.Column="0"
                                     VerticalAlignment="Top"
                                     Foreground="{StaticResource LightBlue1}"
+                                    Margin="5"
                                     Content="{Binding Content}"
                                     IsChecked="{Binding IsChecked}"
                                     Command="{Binding DataContext.CheckedAnswerCommand, RelativeSource={RelativeSource AncestorType=local:SurveyUserControl}}"/>
